--- a/demos/cli/Cargo.toml
+++ b/demos/cli/Cargo.toml
@@ -12,7 +12,7 @@ image.workspace = true
 log.workspace = true
 nalgebra.workspace = true
 
-fidget = { path = "../../fidget", default-features = false, features = ["render", "mesh"] }
+fidget.path = "../../fidget"
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 
 [features]
