--- a/demos/constraints/Cargo.toml
+++ b/demos/constraints/Cargo.toml
@@ -9,7 +9,7 @@ anyhow.workspace = true
 eframe.workspace = true
 log.workspace = true
 
-fidget = { path = "../../fidget", default-features = false, features = ["solver"] }
+fidget.path = "../../fidget"
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
