--- a/demos/viewer/Cargo.toml
+++ b/demos/viewer/Cargo.toml
@@ -15,7 +15,7 @@ nalgebra.workspace = true
 notify.workspace = true
 rhai.workspace = true
 
-fidget = { path = "../../fidget", default-features = false, features = ["render", "rhai"] }
+fidget.path = "../../fidget"
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 
 [features]
