--- a/demos/web-editor/crate/Cargo.toml
+++ b/demos/web-editor/crate/Cargo.toml
@@ -12,7 +12,7 @@ bincode = "1.3.3"
 wasm-bindgen = "0.2.92"
 nalgebra = "0.33"
 
-fidget = {path = "../../../fidget", default-features = false, features = ["rhai", "mesh", "render"]}
+fidget.path = "../../../fidget"
 
 # Take advantage of feature unification to turn on wasm-bindgen here
 rhai = { version = "*", features = ["wasm-bindgen"] }
