--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,10 +35,7 @@ document-features = "0.2"
 dynasmrt = "3.0"
 eframe = { version = "0.31", features = ["wgpu"] }
 enum-map = "2.7.3"
-facet = { version = "=0.27.12", features = ["reflect"] }
-facet-reflect = { version = "=0.27.12" } # see facet-rs/facet#748
-facet-core = { version = "=0.27.12" }
-facet-macros = { version = "=0.27.12" }
+facet = { version = "0.27.14", features = ["reflect"] }
 env_logger = "0.11"
 heck = { version = "0.5" }
 image = { version = "0.25", default-features = false, features = ["png"] }
@@ -49,7 +46,7 @@ notify = "8.0"
 ordered-float = "5"
 rand = "0.9"
 rayon = "1.10"
-rhai = { version = "1.21", features = ["sync"] }
+rhai = { version = "=1.21.0", features = ["sync"] } # pinned due to rhai#1001
 serde = { version = "1.0", features = ["derive", "rc"] }
 static_assertions = "1"
 strum = { version = "0.27", features = ["derive"] }
