--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,13 +35,13 @@ document-features = "0.2"
 dynasmrt = "3.0"
 eframe = { version = "0.31", features = ["wgpu"] }
 enum-map = "2.7.3"
-facet = { version = "0.27.14", features = ["reflect"] }
+facet = { version = "=0.27", features = ["reflect"] }
 env_logger = "0.11"
 heck = { version = "0.5" }
 image = { version = "0.25", default-features = false, features = ["png"] }
 libc = "0.2"
 log = "0.4"
-nalgebra = { version = "0.33", features = ["serde-serialize"] }
+nalgebra = { version = "0.34", features = ["serde-serialize"] }
 notify = "8.0"
 ordered-float = "5"
 rand = "0.9"
@@ -53,5 +53,5 @@ strum = { version = "0.27", features = ["derive"] }
 thiserror = "2"
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
-windows = { version = "0.60", features = ["Win32_Foundation", "Win32_System_Memory"] }
+windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Memory"] }
 zerocopy = { version = "0.8", features = ["derive"] }
